--- a/services/yousofmersal_client/index.html
+++ b/services/yousofmersal_client/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8" />
     <link rel="shortcut icon" href="favicon.ico">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.css" rel="stylesheet" />
     {style_include}
   </head>
   <body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
     <div id="main"></div>
     <script type="module">
     import init from "/{base_path}/assets/dioxus/{app_name}.js";
@@ -18,6 +20,7 @@
     }
     });
     </script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/flowbite.min.js"></script>
     {script_include}
   </body>
 </html>
